# vcl.demos

./: CMakeLists.txt  README.md
graphics/: application.h  basescene.h
graphics/colourtemperature/: CMakeLists.txt  main.cpp
graphics/colourtemperature/shaders/: colourtemperature.glsl  temperature.frag  temperature.h  temperature.vert
graphics/solidwireframe/: CMakeLists.txt  main.cpp
graphics/solidwireframe/shaders/: solidwireframe.frag  solidwireframe.geom  solidwireframe.glsl  solidwireframe.h  solidwireframe.vert
graphics/wrinkledsurfaces/: CMakeLists.txt  main.cpp
graphics/wrinkledsurfaces/doc/: wrinkledsurfaces.md
graphics/wrinkledsurfaces/shaders/: perturbnormal.glsl  simple.frag  wrinkledsurfaces.frag  wrinkledsurfaces.h  wrinkledsurfaces.tesc  wrinkledsurfaces.tese  wrinkledsurfaces.vert
